--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main id="main">
       <h1>We Build Web Apps That Scale</h1>
       <p>Discuss your website needs with a professional today</p>
-      <a href="mailto:info@gnest.tech">LETS GET YOU AHEAD</a>
+      <a href="mailto:hey@gnest.tech">LETS GET YOU AHEAD</a>
     </main>
 
     <section class="sticky">
